[gd_scene format=3 uid="uid://c8q4x5y607a8"]

[ext_resource type="Script" uid="uid://wwhffcmklhxs" path="res://stats_detail_window.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.1, 0.1, 0.1, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.6, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="StatsDetailWindow" type="ColorRect" unique_id=981687344]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)
script = ExtResource("1_script")

[node name="Panel" type="PanelContainer" parent="." unique_id=908289778]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="Margin" type="MarginContainer" parent="Panel" unique_id=1964717376]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="Panel/Margin" unique_id=1683895312]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Panel/Margin/VBox" unique_id=1612256664]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Cart Name"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Author" type="Label" parent="Panel/Margin/VBox" unique_id=1589636978]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Author Name"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/Margin/VBox" unique_id=417106313]
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="Panel/Margin/VBox" unique_id=1915235704]
layout_mode = 2
size_flags_vertical = 3

[node name="ListContainer" type="VBoxContainer" parent="Panel/Margin/VBox/Scroll" unique_id=532526036]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="Panel/Margin/VBox" unique_id=1014500303]
unique_name_in_owner = true
layout_mode = 2
text = "Close"

[connection signal="pressed" from="Panel/Margin/VBox/CloseButton" to="." method="_on_close_pressed"]
